Swapped host to postgres inside .env.example for those who simply remove .example and boot it up. (The compose file specifies the host of the Postgres container as postgres.)

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-SPRING_DATASOURCE_URL=jdbc:postgresql://yourhost:5432/transactions
+SPRING_DATASOURCE_URL=jdbc:postgresql://postgres:5432/transactions
 SPRING_DATASOURCE_USERNAME=youruser
 SPRING_DATASOURCE_PASSWORD=yoursupersecretpassword
 
