--- a/transactions-service/pom.xml
+++ b/transactions-service/pom.xml
@@ -28,6 +28,7 @@
 	</scm>
 	<properties>
 		<java.version>25</java.version>
+		<testcontainers.version>2.0.2</testcontainers.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -50,18 +51,27 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
-    	<groupId>org.testcontainers</groupId>
+			<groupId>org.testcontainers</groupId>
 			<artifactId>testcontainers</artifactId>
+			<version>${testcontainers.version}</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.testcontainers</groupId>
-			<artifactId>postgresql</artifactId>
+			<artifactId>testcontainers-postgresql</artifactId>
+			<version>${testcontainers.version}</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.testcontainers</groupId>
+			<artifactId>testcontainers-junit-jupiter</artifactId>
+			<version>${testcontainers.version}</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.junit.jupiter</groupId>
 			<artifactId>junit-jupiter</artifactId>
+			<version>6.0.1</version>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
