Setting up initial Liquibase migration

--- a/transactions-service/src/main/resources/application.properties
+++ b/transactions-service/src/main/resources/application.properties
@@ -4,9 +4,10 @@ spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:postgresql://localhost:5432/t
 spring.datasource.username=${SPRING_DATASOURCE_USERNAME:myuser}
 spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:yoursupersecretpassword}
 spring.datasource.database-name=${POSTGRES_DB:transactions}
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.jdbc.time_zone=UTC
 spring.jpa.properties.hibernate.jdbc.time_zone=UTC
+spring.liquibase.change-log=classpath:db/changelog/db.changelog-master.yaml
