--- a/transactions-service/pom.xml
+++ b/transactions-service/pom.xml
@@ -77,6 +77,11 @@
 			<version>6.0.1</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.liquibase</groupId>
+			<artifactId>liquibase-core</artifactId>
+			<version>5.0.1</version>
+		</dependency>
 	</dependencies>
 
 	<build>
